BuildHughes/translation-tool/inputs/source_meta/objects/HSvc_NextStepWorkOrderMap__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting defines mapping between Technical Case Next Step and Work Order</description>
    <fields>
        <fullName>Clone_from_Parent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clone from Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_OpenNewTab__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field suggests if New Tab should be opened for the Recommended Next Step value selected</description>
        <label>Open New Tab?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_RecordTypeName__c</fullName>
        <description>The Record Type API Name of resulting Case</description>
        <label>Record Type Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_AssignedtoUser__c</fullName>
        <label>Assigned to User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_CaseReassign__c</fullName>
        <label>Case Reassign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Name__c</fullName>
        <description>Used to store RMA Template Name</description>
        <label>Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type can be &apos;RMA&apos; or &apos;Workorder&apos;</description>
        <inlineHelpText>Type can be &apos;RMA&apos; or &apos;Workorder&apos;</inlineHelpText>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>Work Order type for corresponding next step Value</description>
        <label>Case Subtype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Recommended Next Step Mapping</label>
</CustomObject>